<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_black_48dp"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/timeline"
        android:icon="@drawable/ic_timeline_black_48dp"
        android:title="@string/timeline"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_48dp"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_view_headline_black_48dp"
        android:title="@string/category"
        app:showAsAction="always" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_48dp"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="always" />
</menu>